style.css
@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,600;0,700;0,800;1,100;1,400;1,600&family=Poppins:wght@300;400;500;600&display=swap");

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  outline: 0;
  box-sizing: border-box;
  text-decoration: none;
  list-style: none;
  border: none;
}

:root {
  --color-white: hsl(252, 30%, 100%);
  --color-light: hsl(252, 30%, 95%);
  --color-gray: hsl(252, 15%, 65%);
  --color-primary: hsl(252, 75%, 60%);
  --color-secondary: hsl(252, 100%, 90%);
  --color-success: hsl(120, 95%, 65%);
  --color-danger: hsl(0, 95%, 65%);
  --color-dark: hsl(252, 30%, 17%);
  --color-black: hsl(252, 30%, 10%);

  --border-radius: 2rem;
  --card-border-radius: 1rem;
  --btn-padding: 0.6rem 2rem;
  --search-padding: 0.6rem 1rem;
  --card-padding: 1rem;

  --sticky-top-left: 5.4rem;
  --sticky-top-right: -18rem;
}

body {
  font-family: "Poppins", sans-serif;
  color: var(--color-dark);
  background: var(--color-light);
  overflow-x: hidden;
}

/*================= GENERAL STYLES =================*/
.container {
  width: 80%;
  margin: 0 auto;
}

.profile-picture {
  width: 2.7rem;
  aspect-ratio: 1/1; /*so that width and height have the same value and for a square*/
  border-radius: 50%;
  overflow: hidden;
}

img {
  display: block; /* value="block" so that we can give this inline element the properties of a block element (width, height)*/
  width: 100%; /*100% of his container (profile-picture)*/
}

.btn {
  display: inline-block;
  padding: var(--btn-padding);
  font-weight: 500;
  font-size: 0.9rem;
  border-radius: var(--border-radius);
  cursor: pointer;
  transition: all 300ms ease; /* to smooth the over effect */
}

.btn:hover {
  opacity: 0.8;
}

.btn-primary {
  background: var(--color-primary);
  color: white;
}

.text-bold {
  font-weight: 500;
}

.text-muted {
  color: var(--color-gray);
}

/*================= NAVBAR =================*/
nav {
  width: 100%;
  background: var(--color-white);
  padding: 0.7rem 0;
  position: fixed; /*causes other containers under the nav section to begin on the top of the page. since z-index of nav is 10, these containers will be under the nav container*/
  top: 0;
  z-index: 10; /*the z-index property specifies the stack order of an element*/
}

nav .container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

nav .search-bar {
  background: var(--color-light);
  border-radius: var(--border-radius);
  padding: var(--search-padding);
}

nav .search-bar input[type="search"] {
  background: transparent;
  width: 30vw /* "vw=viewport width" -> 30% of the width of the window */;
  margin-left: 1rem;
  font-size: 0.9rem;
  color: var(--color-dark);
}

nav .search-bar input[type="search"]::placeholder {
  color: var(--color-gray);
}

nav .create {
  display: flex;
  align-items: center;
  gap: 2rem; /* gap indicates the space between the element of the container .create */
}

/*================= MAIN =================*/
main {
  position: relative;
  top: 5.4rem; /*bring the hidden part of the main container which is under the nav bar to the canvas. Value 5.4 correspond to the sticky value of the LEFT container*/
}

main .container {
  display: grid;
  grid-template-columns: 18vw auto 20vw;
  column-gap: 2rem;
  position: relative;
}

/*==== LEFT ====*/
main .container .left {
  height: max-content;
  position: sticky; /*scroll (relatively) until a limit is reached and stay fixed*/
  position: -webkit-sticky; /* Safari */
  top: var(--sticky-top-left);
}

main .container .left .profile {
  display: flex;
  align-items: center;
  column-gap: 1rem;
  padding: var(--card-padding);
  background: var(--color-white);
  border-radius: var(--card-border-radius);
  width: 100%;
}

/*--- SIDEBAR ---*/
.left .sidebar {
  margin-top: 1rem;
  background: var(--color-white);
  border-radius: var(--card-border-radius);
}

.left .sidebar .menu-item {
  display: flex;
  align-items: center;
  height: 4rem;
  cursor: pointer;
  transition: all 300ms ease;
  position: relative;
}

.left .sidebar .menu-item:hover {
  background: var(--color-light);
}

.left .sidebar i {
  font-size: 1.4rem; /*size of the icons in the sidbar*/
  color: var(--color-gray);
  margin-left: 2rem;
  position: relative; /*relative because we want to position the notification count as absolute relative to the i tag (icons)*/
}

.left .sidebar i .notification-count {
  background: var(--color-danger);
  color: white;
  font-size: 0.7rem;
  width: fit-content;
  border-radius: 0.8rem;
  padding: 0.1rem 0.4rem;
  position: absolute;
  top: -0.2rem;
  right: -0.3rem;
}

.left .sidebar h3 {
  margin-left: 1.5rem;
  font-size: 1rem;
}

.left .sidebar .active {
    background: var(--color-light);
  }
  
  .left .sidebar .active i,
  .left .sidebar .active h3 {
    color: var(--color-primary);
  }

